  can break things.  For the time being, the default is scaled down to the
  looser form portage does.

* added man page generation: pquery, pmerge

* pconfig now has a "dump-uncollapsed" command to dump the "raw" config.

* pebuild now supports --no-auto to run just the targeted phase.

* mass expansion of test coverage: pkgcore.restrictions.*,
  pkgcore.util.*, pkgcore.ebuild.*

* diverge from unittest.TestCase to provide extra checks for normal asserts-
  assertNotEqual for example, checks both __eq__ and __ne__ now to smoke out
  any potential oversights in object equality implementation.

* use nsec mtime resolution if available to match python stdlib.

* env var PORTAGE_DEBUG for controlling how much debug info the ebuild env
  generates is now PKGCORE_DEBUG; range is the same, 0 (none), 1 (just the 
  ebuild/eclass), 2 (1 + relevant setup code), 3 (2 + filter-env data),
  4 (everything).


pkgcore 0.2.5:

* handle corner case in depend cycle processing where a package directly
  depends upon itself; fixes processing of sys-devel/libtool specifically.

* for pquery --attr keywords, sort by arch, not by stable/unstable.

* correct misc corner case atom bugs; an intersection bug, miss on an invalid 
  use dep atom lacking a closure in cpy atom, verification of use chars in
  native atom,

* osutils extensions tests, correcting a few cpy differences in behaviour from
  native.

* For unpacking a tarball that doesn't have it's files in a subdir, tar will
  occasionally try to utime the cwd resulting in a failure- uid owner for 
  WORKDIR was changed to allow tar to do the utime, thus succeed in unpacking.
  Only visible for userpriv and with oddball packages, gnuconfig for example.

* Cleanup of a few slow test cases; running the test suite should now be around
  25%-33% faster.


pkgcore 0.2.4:

* refactoring of trigger implementations- cleanup and tests.  Additionally,
  eliminate a potential mtime based frace if the underlying fs (or python